--- a/mvp-sprint-ii-machine-learning-analytics/mvp-sprint-ii-modelo-classico.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/mvp-sprint-ii-modelo-classico.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,20 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier"
    ]
   },
   {
@@ -278,8 +291,8 @@
    "source": [
     "# carga do dataset\n",
     "uci_url = 'https://archive.ics.uci.edu/static/public/697/'\n",
-    "predict_student_uci_url = 'predict+students+dropout+and+academic+success.zip'\n",
-    "request = urllib.request.urlopen(uci_url + urllib.parse.quote(predict_student_uci_url))\n",
+    "predict_student_file = 'predict+students+dropout+and+academic+success.zip'\n",
+    "request = urllib.request.urlopen(uci_url + urllib.parse.quote(predict_student_file))\n",
     "zipfile = ZipFile(BytesIO(request.read()))\n",
     "filepath = TextIOWrapper(zipfile.open('data.csv'), encoding='utf-8')\n",
     "dataset = pd.read_csv(filepath, sep=';')\n",
@@ -300,7 +313,7 @@
     "X = array[:,0:36]\n",
     "Y = array[:,36]\n",
     "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.20, random_state=7)\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.20, shuffle=True, random_state=7, stratify=Y)\n",
     "\n",
     "# criando os folds para a validação cruzada\n",
     "num_splits = 10\n",
@@ -349,6 +362,30 @@
     "models.append(('CART', DecisionTreeClassifier()))\n",
     "models.append(('NB', GaussianNB()))\n",
     "models.append(('SVM', SVC()))\n",
+    "models.append(('LR', LogisticRegression(max_iter=200)))\n",
+    "\n",
+    "# definindo os parâmetros do classificador base para o BaggingClassifier\n",
+    "base = DecisionTreeClassifier()\n",
+    "num_trees = 100\n",
+    "max_features = 3\n",
+    "\n",
+    "# criando os modelos para o VotingClassifier\n",
+    "bases = []\n",
+    "model1 = LogisticRegression(max_iter=200)\n",
+    "bases.append(('Logistic', model1))\n",
+    "model2 = DecisionTreeClassifier()\n",
+    "bases.append(('cart', model2))\n",
+    "model3 = SVC()\n",
+    "bases.append(('svm', model3))\n",
+    "\n",
+    "# criando os ensembles e adicionando na lista de modelos\n",
+    "models.append(('Bagging', BaggingClassifier(base_estimator=base, n_estimators=num_trees)))\n",
+    "models.append(('RF', RandomForestClassifier(n_estimators=num_trees, max_features=max_features)))\n",
+    "models.append(('ET', ExtraTreesClassifier(n_estimators=num_trees, max_features=max_features)))\n",
+    "models.append(('Ada', AdaBoostClassifier(n_estimators=num_trees)))\n",
+    "models.append(('GB', GradientBoostingClassifier(n_estimators=num_trees)))\n",
+    "models.append(('Voting', VotingClassifier(bases)))\n",
+    "\n",
     "\n",
     "# avaliando um modelo por vez\n",
     "for name, model in models:\n",
