implementacao de feature selection

--- a/mvp-sprint-ii-machine-learning-analytics/mvp-sprint-ii-modelo-classico-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/mvp-sprint-ii-modelo-classico-final.ipynb
@@ -41,7 +41,8 @@
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import f_classif\n",
     "from sklearn.feature_selection import RFE\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import f1_score"
    ]
   },
   {
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,12 +315,17 @@
     "# Separação em bases de treino e teste (holdout)\n",
     "array = dataset.values\n",
     "X = array[:,0:36]\n",
-    "y = array[:,36]"
+    "y = array[:,36]\n",
+    "\n",
+    "# Divindindo o dataset em subconjuntos de treino e teste\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, shuffle=True, random_state=42, stratify=y)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +335,7 @@
       "\n",
       "Número original de atributos: 36\n",
       "\n",
-      "Número reduzido de atributos: 4\n",
+      "Número reduzido de atributos: 13\n",
       "\n",
       "Atributos Originais: Index(['Marital status', 'Application mode', 'Application order', 'Course',\n",
       "       'Daytime/evening attendance\\t', 'Previous qualification',\n",
@@ -361,23 +367,65 @@
       " 7.559e+01 8.780e+01 1.411e+03 1.134e+03 2.019e+01 5.923e+00 1.742e+00\n",
       " 4.799e+00]\n",
       "\n",
-      "Atributos Selecionados: ['Curricular units 1st sem (approved)' 'Curricular units 1st sem (grade)'\n",
-      " 'Curricular units 2nd sem (approved)' 'Curricular units 2nd sem (grade)']\n"
+      "Atributos Selecionados: ['Application mode' 'Debtor' 'Tuition fees up to date' 'Gender'\n",
+      " 'Scholarship holder' 'Age at enrollment'\n",
+      " 'Curricular units 1st sem (enrolled)'\n",
+      " 'Curricular units 1st sem (approved)' 'Curricular units 1st sem (grade)'\n",
+      " 'Curricular units 2nd sem (enrolled)'\n",
+      " 'Curricular units 2nd sem (evaluations)'\n",
+      " 'Curricular units 2nd sem (approved)' 'Curricular units 2nd sem (grade)']\n",
+      "[[1 17 1 ... 12.4 0.5 1.79]\n",
+      " [1 1 1 ... 16.2 0.3 -0.92]\n",
+      " [1 1 1 ... 13.9 -0.3 0.79]\n",
+      " ...\n",
+      " [1 17 1 ... 13.9 -0.3 0.79]\n",
+      " [1 39 1 ... 13.9 -0.3 0.79]\n",
+      " [1 17 1 ... 15.5 2.8 -4.06]]\n",
+      "[[17 0 1 ... 0 0 0.0]\n",
+      " [15 0 0 ... 6 6 13.666666666666666]\n",
+      " [1 0 0 ... 0 0 0.0]\n",
+      " ...\n",
+      " [1 0 1 ... 9 1 13.5]\n",
+      " [1 0 1 ... 6 5 12.0]\n",
+      " [10 0 1 ... 6 6 13.0]]\n"
      ]
     }
    ],
    "source": [
-    "# Seleção de atributos\n",
+    "# Seleção de atributos usando Seleção Univariada\n",
     "\n",
-    "# Seleção Univariada\n",
+    "# Calculando o melhor k\n",
+    "f1_score_list = []\n",
     "\n",
-    "# Seleção de atributos com SelectKBest\n",
-    "best_var = SelectKBest(score_func=f_classif, k=24)\n",
+    "model = LogisticRegression(max_iter=200)\n",
     "\n",
-    "# Executa a função de pontuação em (X, y) e obtém os atributos selecionados\n",
-    "fit = best_var.fit(X, y)\n",
+    "for k in range(1, 37):\n",
+    "    # Seleção de atributos com SelectKBest\n",
+    "    kbest_var = SelectKBest(score_func=f_classif, k=k)\n",
     "\n",
-    "# Reduz X para os atributos selecionados\n",
+    "    # Executa a função de pontuação e obtém os atributos selecionados\n",
+    "    kbest_var.fit(X, y)\n",
+    "\n",
+    "    # Reduz X para os atributos selecionados\n",
+    "    features = kbest_var.transform(X)\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(features, y, test_size=0.3, shuffle=True, random_state=42, stratify=y)\n",
+    "\n",
+    "    model.fit(X_train, y_train)\n",
+    "    kbest_pred = model.predict(X_test)    \n",
+    "\n",
+    "    f1_score_kbest = round(f1_score(y_test, kbest_pred, average='weighted'), 3)\n",
+    "    f1_score_list.append(f1_score_kbest)\n",
+    "\n",
+    "kbest = f1_score_list.index(max(f1_score_list)) + 1\n",
+    "\n",
+    "# seleção de atributos com SelectKBest\n",
+    "kbest_var = SelectKBest(score_func=f_classif, k=kbest)\n",
+    "\n",
+    "# executa a função de pontuação em (X, y) e obtém os atributos selecionados\n",
+    "fit = kbest_var.fit(X, y)\n",
+    "\n",
+    "# reduz X para os atributos selecionados\n",
     "features = fit.transform(X)\n",
     "\n",
     "# resultados\n",
@@ -390,7 +438,9 @@
     "# Exibe as pontuações de cada atributo e os 24 escolhidos (com as pontuações mais altas)\n",
     "np.set_printoptions(precision=3) \n",
     "print(\"\\nScores dos Atributos Originais:\", fit.scores_)\n",
-    "print(\"\\nAtributos Selecionados:\", best_var.get_feature_names_out(input_features=dataset.columns[0:36]))"
+    "print(\"\\nAtributos Selecionados:\", kbest_var.get_feature_names_out(input_features=dataset.columns[0:36]))\n",
+    "\n",
+    "X = features"
    ]
   },
   {
@@ -399,8 +449,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Divindindo o dataset em subconjuntos de treino e teste\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, shuffle=True, random_state=7, stratify=y)\n",
     "\n",
     "# criando os folds para a validação cruzada\n",
     "num_splits = 10\n",
@@ -483,7 +531,7 @@
     "\n",
     "# avaliando um modelo por vez\n",
     "for name, model in models:\n",
-    "    cv_results = cross_val_score(model, X_train, Y_train, cv=kfold, scoring='accuracy')\n",
+    "    cv_results = cross_val_score(model, X_train, y_train, cv=kfold, scoring='accuracy')\n",
     "    results.append(cv_results)\n",
     "    names.append(name)\n",
     "    msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
