ajuste prepacao dos dados

--- a/mvp-sprint-ii-machine-learning-analytics/mvp-sprint-ii-modelo-classico-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/mvp-sprint-ii-modelo-classico-final.ipynb
@@ -318,9 +318,7 @@
     "y = array[:,36]\n",
     "\n",
     "# Divindindo o dataset em subconjuntos de treino e teste\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, shuffle=True, random_state=42, stratify=y)\n",
-    "\n",
-    "\n"
+    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, shuffle=True, random_state=42, stratify=y)"
    ]
   },
   {
