carga do dataset

--- a/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,35 @@
     "import itertools\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.datasets import cifar10\n",
+    "\n",
+    "(X_train, y_train), (X_test, y_test) = cifar10.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cifar10_classes = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
+    "\n",
+    "train_dir = \"./train/\"\n",
+    "test_dir = \"./test/\" \n",
+    "\n",
+    "train_img_samples = 5 # X_train.shape[0]\n",
+    "\n",
+    "for i in range(train_img_samples):\n",
+    "    img = X_train[i]\n",
+    "    plt.imsave(\"./train/\"+str([cifar10_classes[x] for x in y_train[i]]).strip('[]').strip('\\'')+'.'+str(i)+'.png',img) "
    ]
   }
  ],
