inclusao do train_datagen

--- a/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_datasets(X_dataset, y_dataset, classes, dir, n_samples, create_file):\n",
+    "    if n_samples is None:\n",
+    "        img_samples = X_dataset.shape[0]\n",
+    "    else:\n",
+    "        img_samples = n_samples\n",
+    "\n",
+    "    df_aux = pd.DataFrame(columns=['id', 'label'])\n",
+    "\n",
+    "    list_aux = []\n",
+    "\n",
+    "    for i in range(img_samples):\n",
+    "        nm_file = str(i)+'-'+str([classes[x] for x in y_dataset[i]]).strip('[]').strip('\\'')+'.'+'png'\n",
+    "        sample = {'id':nm_file, 'label':str([classes[x] for x in y_dataset[i]]).strip('[]').strip('\\'')}\n",
+    "        list_aux.append(sample)\n",
+    "        if create_file:\n",
+    "            img = X_dataset[i]\n",
+    "            plt.imsave(dir + nm_file, img)\n",
+    "\n",
+    "    return pd.concat([df_aux, pd.DataFrame(list_aux)], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,20 +71,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "cifar10_classes = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
     "\n",
     "train_dir = \"./train/\"\n",
-    "test_dir = \"./test/\" \n",
+    "test_dir = \"./test/\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0-frog.png</td>\n",
+       "      <td>frog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1-truck.png</td>\n",
+       "      <td>truck</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2-truck.png</td>\n",
+       "      <td>truck</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3-deer.png</td>\n",
+       "      <td>deer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4-automobile.png</td>\n",
+       "      <td>automobile</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 id       label\n",
+       "0        0-frog.png        frog\n",
+       "1       1-truck.png       truck\n",
+       "2       2-truck.png       truck\n",
+       "3        3-deer.png        deer\n",
+       "4  4-automobile.png  automobile"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df = prepare_datasets(X_train, y_train, cifar10_classes, train_dir, 10, create_file=True)\n",
     "\n",
-    "train_img_samples = 5 # X_train.shape[0]\n",
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0-cat.png</td>\n",
+       "      <td>cat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1-ship.png</td>\n",
+       "      <td>ship</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2-ship.png</td>\n",
+       "      <td>ship</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3-airplane.png</td>\n",
+       "      <td>airplane</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4-frog.png</td>\n",
+       "      <td>frog</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id     label\n",
+       "0       0-cat.png       cat\n",
+       "1      1-ship.png      ship\n",
+       "2      2-ship.png      ship\n",
+       "3  3-airplane.png  airplane\n",
+       "4      4-frog.png      frog"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df = prepare_datasets(X_test, y_test, cifar10_classes, test_dir, 5, create_file=True)\n",
     "\n",
-    "for i in range(train_img_samples):\n",
-    "    img = X_train[i]\n",
-    "    plt.imsave(\"./train/\"+str([cifar10_classes[x] for x in y_train[i]]).strip('[]').strip('\\'')+'.'+str(i)+'.png',img) "
+    "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de imagens para treinamento: 10\n",
+      "Total de imagens para teste      : 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Total de imagens para treinamento: %s' % len(os.listdir(train_dir)))\n",
+    "print('Total de imagens para teste      : %s' % len(os.listdir(test_dir)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 8 validated image filenames belonging to 8 classes.\n",
+      "Found 2 validated image filenames belonging to 8 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_datagen=ImageDataGenerator(rescale=1.0/255.0,\n",
+    "                                validation_split=0.25)\n",
+    "\n",
+    "train_generator=train_datagen.flow_from_dataframe(\n",
+    "dataframe=train_df,\n",
+    "directory=train_dir,\n",
+    "x_col=\"id\",\n",
+    "y_col=\"label\",\n",
+    "subset=\"training\",\n",
+    "batch_size=32,\n",
+    "seed=42,\n",
+    "shuffle=True,\n",
+    "class_mode=\"categorical\",\n",
+    "target_size=(32,32))\n",
+    "\n",
+    "valid_generator=train_datagen.flow_from_dataframe(\n",
+    "dataframe=train_df,\n",
+    "directory=train_dir,\n",
+    "x_col=\"id\",\n",
+    "y_col=\"label\",\n",
+    "subset=\"validation\",\n",
+    "batch_size=32,\n",
+    "seed=42,\n",
+    "shuffle=True,\n",
+    "class_mode=\"categorical\",\n",
+    "target_size=(32,32))"
    ]
   }
  ],
