criacao funcao create_files

--- a/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_datasets(X_dataset, y_dataset, classes, dir, n_samples, create_file):\n",
+    "def prepare_dataset(X_dataset, y_dataset, classes, n_samples):\n",
     "    if n_samples is None:\n",
     "        img_samples = X_dataset.shape[0]\n",
     "    else:\n",
@@ -51,16 +51,31 @@
     "        nm_file = str(i)+'-'+str([classes[x] for x in y_dataset[i]]).strip('[]').strip('\\'')+'.'+'png'\n",
     "        sample = {'id':nm_file, 'label':str([classes[x] for x in y_dataset[i]]).strip('[]').strip('\\'')}\n",
     "        list_aux.append(sample)\n",
-    "        if create_file:\n",
-    "            img = X_dataset[i]\n",
-    "            plt.imsave(dir + nm_file, img)\n",
     "\n",
     "    return pd.concat([df_aux, pd.DataFrame(list_aux)], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_files(X_dataset, y_dataset, classes, dir, n_samples):\n",
+    "    if n_samples is None:\n",
+    "        img_samples = X_dataset.shape[0]\n",
+    "    else:\n",
+    "        img_samples = n_samples\n",
+    "\n",
+    "    for i in range(img_samples):\n",
+    "        nm_file = str(i)+'-'+str([classes[x] for x in y_dataset[i]]).strip('[]').strip('\\'')+'.'+'png'\n",
+    "        img = X_dataset[i]\n",
+    "        plt.imsave(dir + nm_file, img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -150,20 +165,24 @@
        "4  4-automobile.png  automobile"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df = prepare_datasets(X_train, y_train, cifar10_classes, train_dir, 10, create_file=True)\n",
+    "num_samples = 10 #X_train.shape[0]\n",
+    "\n",
+    "create_files(X_train, y_train, cifar10_classes, train_dir, num_samples)\n",
+    "\n",
+    "train_df = prepare_dataset(X_train, y_train, cifar10_classes, num_samples)\n",
     "\n",
     "train_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -230,20 +249,24 @@
        "4      4-frog.png      frog"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_df = prepare_datasets(X_test, y_test, cifar10_classes, test_dir, 5, create_file=True)\n",
+    "num_samples = 5 #X_test.shape[0]\n",
+    "\n",
+    "create_files(X_test, y_test, cifar10_classes, test_dir, num_samples)\n",
+    "\n",
+    "test_df = prepare_dataset(X_test, y_test, cifar10_classes, num_samples)\n",
     "\n",
     "test_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
