ajuste nos imports

--- a/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,9 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+      "170498071/170498071 [==============================] - 9s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.datasets import cifar10\n",
     "\n",
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
