--- a/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,17 +70,39 @@
     "from keras import layers\n",
     "from keras import models\n",
     "import os\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "#from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "from datetime import datetime\n",
     "from tensorflow import keras\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.metrics import confusion_matrix #, classification_report\n",
     "import sklearn.metrics as skm\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU não encontrada\n"
+     ]
+    }
+   ],
+   "source": [
+    "gpu_dev_name = tf.test.gpu_device_name()\n",
+    "if gpu_dev_name != '/device:GPU:0':\n",
+    "  print('GPU não encontrada')\n",
+    "else:\n",
+    "    print('GPU encontrada em: {}'.format(gpu_dev_name))"
    ]
   },
   {
@@ -96,6 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Prepara dataframe com os dados lidos a partir do dataset CIFAR10 \n",
     "def prepare_dataset(X_dataset, y_dataset, classes, n_samples):\n",
     "    if n_samples is None:\n",
     "        img_samples = X_dataset.shape[0]\n",
@@ -113,7 +136,7 @@
     "\n",
     "    return pd.concat([df_aux, pd.DataFrame(list_aux)], ignore_index=True)\n",
     "\n",
-    "\n",
+    "# Cria arquivos nos diretórios de trabalho com as imagens contidas no dataset CIFAR10\n",
     "def create_files(X_dataset, y_dataset, classes, dir, n_samples):\n",
     "    if n_samples is None:\n",
     "        img_samples = X_dataset.shape[0]\n",
@@ -125,7 +148,7 @@
     "        img = X_dataset[i]\n",
     "        plt.imsave(dir + nm_file, img)\n",
     "\n",
-    "\n",
+    "# Cria os diretórios de trabalho usados no processamento do código no notebook\n",
     "def create_directory(dir):\n",
     "    if os.path.exists(dir):\n",
     "        for file in os.listdir(dir):\n",
@@ -133,7 +156,7 @@
     "    else:\n",
     "        os.makedirs(dir)\n",
     "\n",
-    "\n",
+    "# Plota gráfico com a evolução do valor loss em função da época\n",
     "def plot_loss(history):  \n",
     "    plt.plot(history.history['loss'])\n",
     "    plt.plot(history.history['val_loss'])\n",
@@ -143,7 +166,7 @@
     "    plt.legend(['train', 'validation'], loc='upper left')\n",
     "    plt.show()\n",
     "\n",
-    "\n",
+    "# Plota gráfico com a evolução do valor accuracy em função da época\n",
     "def plot_accuracy(history):  \n",
     "    plt.plot(history.history['accuracy'])\n",
     "    plt.plot(history.history['val_accuracy'])\n",
@@ -153,7 +176,7 @@
     "    plt.legend(['train', 'validation'], loc='upper left')\n",
     "    plt.show()\n",
     "\n",
-    "\n",
+    "# Plota matriz de confusão\n",
     "def plot_confusion_matrix(actual, predicted, class_names):\n",
     "    cnf_matrix = confusion_matrix(actual, predicted, labels=class_names)\n",
     "    np.set_printoptions(precision=2)\n",
@@ -177,7 +200,7 @@
     "    plt.title('Matriz de Confusão', fontsize=18)\n",
     "    plt.show()\n",
     "\n",
-    "\n",
+    "# Define configuração do modelo 1\n",
     "def model1(p_train_generator, p_test_generator, p_valid_generator, p_train_step_size, p_validation_step_size, p_epochs):\n",
     "    model1 = models.Sequential()\n",
     "\n",
@@ -196,13 +219,15 @@
     "    model1.add(layers.Dense(512, activation='relu'))\n",
     "    model1.add(layers.Dense(10, activation='softmax'))\n",
     "    \n",
+    "    model1.summary()\n",
+    "\n",
     "    history = compile_fit_model(model1, p_train_generator, p_valid_generator, p_train_step_size, p_validation_step_size, p_epochs)\n",
     "\n",
     "    loss, accuracy = display_result_model (model1, p_test_generator, history)\n",
     "\n",
     "    return model1, loss, accuracy\n",
     "\n",
-    "\n",
+    "# Define configuração do modelo 2\n",
     "def model2(p_train_generator, p_test_generator, p_valid_generator, p_train_step_size, p_validation_step_size, p_epochs):\n",
     "    model2 = models.Sequential()\n",
     "\n",
@@ -225,13 +250,15 @@
     "    model2.add(layers.Dropout(0.25))\n",
     "    model2.add(layers.Dense(10, activation='softmax'))\n",
     "    \n",
+    "    model2.summary()\n",
+    "    \n",
     "    history = compile_fit_model(model2, p_train_generator, p_valid_generator, p_train_step_size, p_validation_step_size, p_epochs)\n",
     "\n",
     "    loss, accuracy = display_result_model (model2, p_test_generator, history)\n",
     "\n",
     "    return model2, loss, accuracy\n",
     "\n",
-    "\n",
+    "# Define configuração do modelo 3\n",
     "def model3(p_train_generator, p_test_generator, p_valid_generator, p_train_step_size, p_validation_step_size, p_epochs):\n",
     "    model3 = models.Sequential()\n",
     "\n",
@@ -258,13 +285,15 @@
     "    model3.add(layers.Dropout(0.25))\n",
     "    model3.add(layers.Dense(10, activation='softmax'))\n",
     "    \n",
+    "    model3.summary()\n",
+    "    \n",
     "    history = compile_fit_model(model3, p_train_generator, p_valid_generator, p_train_step_size, p_validation_step_size, p_epochs)\n",
     "\n",
     "    loss, accuracy = display_result_model (model3, p_test_generator, history)\n",
     "\n",
     "    return model3, loss, accuracy\n",
     "\n",
-    "\n",
+    "# Processa a compilação e a função fit em um modelo\n",
     "def compile_fit_model(p_model, p_train_generator, p_valid_generator, p_train_step_size, p_validation_step_size, p_epochs):\n",
     "    p_model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
@@ -276,17 +305,17 @@
     "    \n",
     "    return history\n",
     "\n",
-    "\n",
+    "# Apresenta resultados do processamento de determinada operação no modelo\n",
     "def display_result_model (p_model, p_test_generator, p_history):\n",
-    "    # plot_loss(p_history)\n",
-    "    # plot_accuracy(p_history)\n",
+    "    plot_loss(p_history)\n",
+    "    plot_accuracy(p_history)\n",
     "\n",
     "    loss, accuracy = p_model.evaluate_generator(p_test_generator)\n",
     "    print(\"Test: accuracy = %f  ;  loss = %f \" % (accuracy, loss))\n",
     "\n",
     "    return loss, accuracy\n",
     "\n",
-    "\n",
+    "# Plota informações sobre um dataset\n",
     "def plot_dataset_class(p_dataset, p_title):\n",
     "    print((p_dataset['label']).value_counts())\n",
     "    p_dataset['label'].value_counts().plot.bar(title=p_title)\n"
@@ -297,6 +326,13 @@
    "metadata": {},
    "source": [
     "### Carga e preparação dos dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carrega o dataset, separa entre treino e teste e monta a lista de classes das imagens."
    ]
   },
   {
@@ -313,6 +349,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria os diretórios de trabalho."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
@@ -326,15 +369,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define o tamanho das amostras de treino e teste usadas no processamento do notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# v_train_samples = 1000 \n",
-    "# v_test_samples = 200 \n",
-    "v_train_samples = X_train.shape[0]\n",
-    "v_test_samples = X_test.shape[0]"
+    "v_train_samples = 1000 \n",
+    "v_test_samples = 200 \n",
+    "# v_train_samples = X_train.shape[0]\n",
+    "# v_test_samples = X_test.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria os arquivos de imagens de treinamento nos diretórios de trabalho e prepara o dataframe de treinamento usado no processamento do notebook."
    ]
   },
   {
@@ -422,6 +479,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria os arquivos de imagens de teste nos diretórios de trabalho e prepara o dataframe de teste usado no processamento do notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
@@ -506,6 +570,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apresenta informações sobre os dados de treinamento."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -540,10 +611,14 @@
     }
    ],
    "source": [
-    "# print((train_df['label']).value_counts())\n",
-    "# train_df['label'].value_counts().plot.bar(title='Dados para Treinamento por classe')\n",
-    "\n",
     "plot_dataset_class(train_df, 'Dados para Treinamento por classe')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apresenta informações sobre os dados de teste."
    ]
   },
   {
@@ -581,9 +656,6 @@
     }
    ],
    "source": [
-    "# print((test_df['label']).value_counts())\n",
-    "# test_df['label'].value_counts().plot.bar(title='Dados para Teste por classe')\n",
-    "\n",
     "plot_dataset_class(test_df, 'Dados para Teste por classe')"
    ]
   },
